# dependabot-changelog-writer

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md  action.yml  example_file.txt  typos.toml
.github/: codecov.yml
.github/workflows/: CI.yml  dependabot_changelog.yml  integration_tests.yml  release.yml  rust_checks.yml
scripts/: build_openssl.bash
src/: changelog.rs  config.rs  dependabot_changes.rs  event_json.rs  git.rs  github_env.rs  main.rs  test_util.rs  util.rs
src/changelog/: parse.rs
src/dependabot_changes/: dependabot_change.rs  dependabot_example_bodies.rs  entry_pattern.rs  old_version.rs
src/test_util/: example_changelogs.rs  example_dependabot_pr_bodies.rs  example_event_json.rs  example_parsed_changes.rs
test_data/dependabot_pr_bodies/: 1_docker_novel_version.md  1_submodule_short_sha.md  2_actions_sha_and_semver.md  7_crates_semver.md  ISSUE_51.md  dependabot_commands_boilerplate.md
test_data/event_json/: ISSUE_51.json  minimal_pr_opened.json
tests/: test_dependabot_changelog_writer.rs
