[package]
name = "dependabot-changelog-writer"
description = "Generate a changelog entry from a dependabot PR"
version = "1.0.0"
edition = "2021"
rust-version = "1.81"

[dependencies]
auth-git2 = "0.5.5"
env_logger = "0.11.6"
git2 = "0.20.0"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
similar = "2.6.0"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3"
testresult = "0.4.1"

# The binary is plenty fast, we optimize for size to reduce the amount that has to be downloaded when the action is run 
[profile.release]
strip = true
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
